creata libreria SAREnvironment

--- a/Grid Planner/src/Grid Planner/Grid Planner.csproj
+++ b/Grid Planner/src/Grid Planner/Grid Planner.csproj
@@ -13,4 +13,7 @@
     <PackageReference Include="Microsoft.NETCore.App" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SAREnvCoreLib\SAREnvironmentLib.csproj" />
+  </ItemGroup>
 </Project>
