--- a/Grid Planner/src/Grid Planner/Grid Planner.csproj
+++ b/Grid Planner/src/Grid Planner/Grid Planner.csproj
@@ -14,6 +14,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\SAREnvCoreLib\SAREnvironmentLib.csproj" />
+    <ProjectReference Include="..\..\lib\SARLib\SARLib.csproj" />
   </ItemGroup>
 </Project>
