--- a/Grid Planner/test/SARLibUnitTest/SARLibUnitTest.csproj
+++ b/Grid Planner/test/SARLibUnitTest/SARLibUnitTest.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>    
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SAREnvCoreLib\SAREnvironmentLib.csproj" />
+    <ProjectReference Include="..\..\lib\SARLib\SARLib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
