--- a/Grid Planner/lib/SARLib/SARLib.csproj
+++ b/Grid Planner/lib/SARLib/SARLib.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Toolbox\Logs\**" />
+    <EmbeddedResource Remove="Toolbox\Logs\**" />
+    <None Remove="Toolbox\Logs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
