reso consistente i valori di probabilità in SARGrid e SARPoint

--- a/Grid Planner/lib/SARLib/SARLib.csproj
+++ b/Grid Planner/lib/SARLib/SARLib.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Toolbox\analisi propagazione confidenza.xlsx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
