--- a/Grid Planner/test/SARLibUnitTest/SARLibUnitTest.csproj
+++ b/Grid Planner/test/SARLibUnitTest/SARLibUnitTest.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Output\Data\CSV\61\UTIL_5506821.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170125-04" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.10-rc2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.0.8-rc2" />
@@ -16,6 +20,11 @@
 
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Output\Data\" />
+    <Folder Include="Output\Simulator Run\" />
   </ItemGroup>
 
 </Project>
