--- a/Grid Planner/test/SARLibUnitTest/SARLibUnitTest.csproj
+++ b/Grid Planner/test/SARLibUnitTest/SARLibUnitTest.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Output\Data\" />
+    <Folder Include="Output\SARGrid\" />
     <Folder Include="Output\SARGrid\" />
     <Folder Include="Output\SARGrid\" />
     <Folder Include="Output\Simulator Run\" />
