--- a/Grid Planner/test/SARLibUnitTest/SARLibUnitTest.csproj
+++ b/Grid Planner/test/SARLibUnitTest/SARLibUnitTest.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Output\Data\CSV\61\UTIL_5506821.csv" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170125-04" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.10-rc2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.0.8-rc2" />
@@ -23,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Output\Data\BAYES\" />
+    <Folder Include="Output\Data\CSV\" />
+    <Folder Include="Output\SARGrid\" />
     <Folder Include="Output\SARGrid\" />
     <Folder Include="Output\SARGrid\" />
     <Folder Include="Output\SARGrid\" />
