--- a/Grid Planner/src/Grid Planner/Simulator.csproj
+++ b/Grid Planner/src/Grid Planner/Simulator.csproj
@@ -22,9 +22,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\lib\SARLib\SARLib.csproj" />
+    <Folder Include="Data\Environments\hidden\" />
+    <Folder Include="Data\Logs\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Data\Logs\" />
+    <ProjectReference Include="..\..\lib\SARLib\SARLib.csproj" />
   </ItemGroup>
 </Project>
