--- a/Grid Planner/src/Grid Planner/Simulator.csproj
+++ b/Grid Planner/src/Grid Planner/Simulator.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\..\lib\SARLib\SARLib.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Data\Environments\hidden\" />
     <Folder Include="Data\Logs\" />
   </ItemGroup>
 </Project>
